--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "daisyui": "^5.0.46",
     "next": "15.4.3",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "supabase": "^2.31.8"
   },
   "devDependencies": {
     "typescript": "^5",
