--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@libsql/client": "^0.15.10",
     "daisyui": "^5.0.46",
+    "drizzle-kit": "^0.31.4",
+    "drizzle-orm": "^0.44.3",
     "next": "15.4.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
