--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "daisyui": "^5.0.46",
     "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.44.3",
+    "jotai": "^2.12.5",
     "jsonwebtoken": "^9.0.2",
     "mdx": "^0.3.1",
     "next": "15.4.3",
