--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/bun": "^1.2.19",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mdx": "^2.0.13",
+    "bcryptjs": "^3.0.2",
     "daisyui": "^5.0.46",
     "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.44.3",
@@ -26,14 +27,17 @@
     "react-dom": "19.1.0",
     "rehype-pretty-code": "^0.14.1",
     "remark-frontmatter": "^5.0.0",
-    "remark-mdx-frontmatter": "^5.2.0"
+    "remark-mdx-frontmatter": "^5.2.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^3.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "@types/uuid": "^10.0.0",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
