--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@libsql/client": "^0.15.10",
     "@mdx-js/loader": "^3.1.0",
     "@next/mdx": "^15.4.3",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/bun": "^1.2.19",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mdx": "^2.0.13",
@@ -25,6 +26,7 @@
     "mdx": "^0.3.1",
     "next": "15.4.3",
     "next-auth": "^4.24.11",
+    "nextjs-toploader": "^3.8.16",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
